# Godel_ros

./: README.md
src/: .rosinstall  .rosinstall.bak
src/abb/: NEW_README.md
src/abb/abb_driver/rapid/: ROS_common.sys
src/descartes/descartes_core/include/descartes_core/: robot_model.h  utils.h
src/descartes/descartes_moveit/include/descartes_moveit/: moveit_state_adapter.h
src/descartes/descartes_moveit/src/: ikfast_moveit_state_adapter.cpp  moveit_state_adapter.cpp
src/godel/godel_process_planning/: README.md
src/godel/godel_process_planning/src/: blend_process_planning.cpp  common_utils.cpp
src/godel/godel_robots/abb/godel_irb1200/godel_irb1200_moveit_config/config/: irb1200_workspace.srdf
src/godel/godel_robots/abb/godel_irb1200/godel_irb1200_support/launch/: irb1200_blending.launch
src/godel/godel_robots/blending_end_effector/meshes/visual/: stofzuig13.stl  stofzuig14.stl  stofzuig15.stl  stofzuig16.stl
src/godel/godel_robots/blending_end_effector/urdf/: gp25_blending_eff_macro.xacro
src/godel/godel_robots/yaskawa/gp25/gp25_descartes/: CMakeLists.txt  gp25_descartes_plugins.xml  package.xml
src/godel/godel_robots/yaskawa/gp25/gp25_descartes/include/gp25_descartes/: gp25_robot_model.h
src/godel/godel_robots/yaskawa/gp25/gp25_descartes/src/: gp25_robot_model.cpp
src/godel/godel_robots/yaskawa/gp25/gp25_workspace_ikfast_manipulator_plugin/: CMakeLists.txt  gp25_workspace_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/godel/godel_robots/yaskawa/gp25/gp25_workspace_ikfast_manipulator_plugin/include/gp25_workspace_ikfast_manipulator_plugin/: gp25_manipulator_ikfast_moveit_plugin.hpp
src/godel/godel_robots/yaskawa/gp25/gp25_workspace_ikfast_manipulator_plugin/src/: gp25_plugin_init.cpp  gp25_workspace_manipulator_ikfast_moveit_plugin.cpp  gp25_workspace_manipulator_ikfast_solver.cpp
src/godel/godel_robots/yaskawa/gp25/gp25_workspace_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/godel/godel_robots/yaskawa/gp25/yaskawa_gp25_support/: CMakeLists.txt  package.xml
src/godel/godel_robots/yaskawa/gp25/yaskawa_gp25_support/config/: robot_state_visualize.rviz
src/godel/godel_robots/yaskawa/gp25/yaskawa_gp25_support/launch/: gp25_blending.launch  load_gp25.launch  robot_interface_streaming_gp25.launch  robot_state_visualize_gp25.launch  test_gp25.launch
src/godel/godel_robots/yaskawa/gp25/yaskawa_gp25_support/meshes/gp25/collision/: b_axis.stl  base_axis.stl  l_axis.stl  r_axis.stl  s_axis.stl  t_axis.stl  u_axis.stl
src/godel/godel_robots/yaskawa/gp25/yaskawa_gp25_support/meshes/gp25/visual/: b_axis.dae  base_axis.dae  car_trunk.stl  l_axis.dae  r_axis.dae  t_axis.dae  u_axis.dae
src/godel/godel_robots/yaskawa/gp25/yaskawa_gp25_support/urdf/: gp25.xacro  gp25_macro.xacro  gp25_swri_demo_cell_macro.xacro  gp25_workspace.urdf  gp25_workspace.xacro  yaskawa_gp25.urdf
src/godel/godel_surface_detection/: README.md
src/godel/godel_surface_detection/src/services/: blending_service_path_generation.cpp  surface_blending_service.cpp
src/godel/path_planning_plugins/: README.md
src/godel/path_planning_plugins/config/: path_planning.yaml
src/godel/path_planning_plugins/src/openveronoi/: blend_planner.cpp  blend_planner2.cpp
src/godel/path_planning_plugins/src/profilometer/: profilometer_scan.cpp
(+31 files in other folders)
