<package>
	<name>yaskawa_gp25_support</name>
	<version>0.1.0</version>
	<license>Apache v2.0</license>
	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<url type="bugtracker">https://github.com/ros-industrial/yaskawa/issues</url>
	<url type="repository">https://github.com/ros-industrial/yaskawa</url>

	<description>
		<p>
			ROS Industrial support for the Yaskawa MH24.
		</p>
		<p>
			This package contains configuration data, 3D models and launch files
			for Yaskawa MH24 manipulators.
		</p>
		<p>
			<b>Specifications</b>
		</p>
		<ul>
			<li>gp25 - Default</li>
		</ul>
		<p>
			Joint limits and maximum joint velocities are based on the information
			found in the online
			https://www.motoman.com/hubfs/Robots/GP25.pdf
			All urdfs are based on the default motion and joint velocity limits,
			unless noted otherwise.
		</p>
		<p>
			Before using any of the configuration files and / or meshes included
			in this package, be sure to check they are correct for the particular
			robot model and configuration you intend to use them with.
		</p>
	</description>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>motoman_driver</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>joint_state_publisher</run_depend>

	<export>
		<architecture_independent/>
	</export>
</package>
